<resources>
    <string name="app_name">Virtual Monitoring</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="flaskAPI">"http://kapilsz.pythonanywhere.com"</string>

    <string name="menu_home">Home</string>
    <string name="menu_insights">Insights</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_lgout">Logout</string>
    <string name="menu_refer">Refer</string>
    <string name="menu_share">Share</string>
    <string name="title_activity_home_co2">HomeCo2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>