<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">


    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapp.ui.home.home"
        android:label="@string/menu_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/nav_insights"
        android:name="com.example.myapp.ui.insights.insights"
        android:label="@string/menu_insights"
        tools:layout="@layout/insights_fragment" />

<!--    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.myapp.ui.setting.setting"
        android:label="@string/menu_setting"
        tools:layout="@layout/setting_fragment" />-->

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.myapp.ui.profile.profile"
        android:label="@string/menu_profile"
        tools:layout="@layout/profile_fragment" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.myapp.ui.logout.logout"
        android:label="@string/menu_lgout"
        tools:layout="@layout/logout_fragment" />

    <fragment
        android:id="@+id/nav_refer"
        android:name="com.example.myapp.ui.refer.refer"
        android:label="@string/menu_refer"
        tools:layout="@layout/refer_fragment" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.myapp.ui.share.share"
        android:label="@string/menu_share"
        tools:layout="@layout/share_fragment" />


</navigation>